# Scintillator-Detector

./: CMakeLists.txt
B4a/: B4.root  G4History.macro  exampleB4a.cc
B4a/Files/: energyWLS_ABS.txt
B4a/include/: DataVector.hh  DetectorConstruction.hh  EventAction.hh  EventCounter.hh  HitAction.hh  PhotonMuonHelper.hh  SteppingAction.hh  TrackingAction.hh
B4a/src/: ActionInitialization.cc  DataVector.cc  DetectorConstruction.cc  EventAction.cc  EventCounter.cc  HitAction.cc  PhotonMuonHelper.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
